--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.saurabhAPIAuto</groupId>
-  <artifactId>APIAutomationATB6X</artifactId>
+  <artifactId>API_Automation_Learning</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
